<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbkg">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:contentDescription="@string/back_button"
        android:scaleType="centerCrop"
        style="@style/iv_style"
        android:src="@drawable/baseline_remove_24"
        tools:ignore="RedundantDescriptionCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/createText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:padding="8dp"
            android:text="@string/create"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            style="@style/iv_style"
            android:contentDescription="@string/clr_btn"
            android:src="@drawable/baseline_clear_24"
            tools:ignore="RedundantDescriptionCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_post_normally"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            style="@style/non_ano"
            android:contentDescription="@string/ano" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/non_ano"
            android:layout_marginStart="20dp"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_post_anonymously"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            style="@style/ano"
            android:contentDescription="@string/ano" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ano"
            android:layout_marginStart="20dp"
            android:textSize="20sp"/>

    </LinearLayout>


</LinearLayout>