<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/app_name" />

        <LinearLayout
            android:id="@+id/ll_TopNav"
            style="@style/ScreenBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_BackHome"
                style="@style/iv_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back_button"
                android:src="@drawable/baseline_arrow_back_24"
                tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

            <TextView
                android:id="@+id/tv_TopNav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/create"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt_Submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/post"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".CreateNewPost">

            <LinearLayout
                android:id="@+id/ll_CreatePost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_PostDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="15dp"
                        android:id="@+id/iv_UserProfile"
                        style="@style/iv_style"
                        android:src="@drawable/baseline_account_circle_24"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/profile_img" />

                    <LinearLayout
                        android:id="@+id/ll_User"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_UserDisplayName"
                            style="@style/TextColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:text="@string/ano_btn"/>

                            <androidx.appcompat.widget.SwitchCompat
                                android:id="@+id/isAnonymous"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/ll_Post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp"
                    style="@style/cv_style"
                    app:cardPreventCornerOverlap="false"
                    app:contentPadding="15dp"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="16dp">

                    <EditText
                        android:id="@+id/et_Caption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:hint="@string/share_content"
                        android:padding="8dp"
                        android:background="@null"
                        android:minHeight="100dp"
                        android:autofillHints=""
                        android:inputType="text" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/ll_Tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp"
                    style="@style/cv_style"
                    app:cardPreventCornerOverlap="false"
                    app:contentPadding="15dp"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_Tags"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="@string/hashtag" />


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:minHeight="48dp">

                            <EditText
                                android:id="@+id/et_Tags"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/tag"
                                android:padding="8dp"
                                android:ems="15"
                                android:inputType="text"
                                android:minHeight="48dp"
                                android:autofillHints="" />

                            <ImageButton
                                android:id="@+id/bt_ClearTags"
                                style="@style/iv_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:contentDescription="@string/clr_btn"
                                android:src="@drawable/baseline_clear_24"
                                tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

                        </LinearLayout>



                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="4dp"
                    style="@style/rules_style"
                    android:layout_margin="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_Disclaimer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginHorizontal="15dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/rules"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/cb_Disclaimer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical" />

                            <TextView
                                android:id="@+id/termsTextView"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="@string/agree"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>